--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ server.servlet.context-path=/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/finalproject?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=fast
+spring.datasource.password=past
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
